# fastapi-aiopika-boilerplate

./: .env.dev-example  .gitignore  README.MD  docker-compose.yaml  pyproject.toml
src/: Dockerfile  consumer.py  main.py
src/config/: __init__.py  base.py  db.py  rabbit_connection.py
src/localizations/: consumer.py  rabbit.py
src/pika/: __init__.py  router.py
src/pika/tasks/: __init__.py  test.py
src/routes/: __init__.py  test.py
